--- a/Numpy Simple Neural Network.ipynb
+++ b/Numpy Simple Neural Network.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -13,9 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -27,9 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -45,23 +51,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "np.random.seed(1)\n",
     "\n",
     "# Synapses l0 -> l1 (weights)\n",
-    "syn0 = np.random.random((3,1))"
+    "syn0 = 2 * np.random.random((3,1)) - 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -80,9 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -90,10 +102,10 @@
      "output_type": "stream",
      "text": [
       "Result after training:\n",
-      "[[ 0.00966553]\n",
-      " [ 0.99211898]\n",
-      " [ 0.99358961]\n",
-      " [ 0.00786455]]\n"
+      "[[ 0.00966449]\n",
+      " [ 0.99211957]\n",
+      " [ 0.99358898]\n",
+      " [ 0.00786506]]\n"
      ]
     }
    ],
@@ -106,7 +118,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
