--- a/Numpy Naive Gradient Descent Simple NN.ipynb
+++ b/Numpy Naive Gradient Descent Simple NN.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "The difference with respect to Numpy Simple Neural Network is that here we apply Naive Gradient Descent to update the weights: we compute the gradient in stead of just calculating the delta"
+    "The difference with respect to Numpy Simple Neural Network is that here we apply Naive Gradient Descent to update the weights: we compute the gradient instead of just calculating the delta.\n",
+    "\n",
+    "Also note that in this case the error is $layer_1 - y$ instead of $y - layer_1$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -20,9 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -34,9 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -47,9 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -65,9 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -79,9 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -92,7 +109,7 @@
     "    layer_1 = sigmoid(np.dot(layer_0,synapse_0))\n",
     "    \n",
     "    # error\n",
-    "    layer_1_error = y - layer_1\n",
+    "    layer_1_error = layer_1 - y\n",
     "    \n",
     "    '''GRADIENT DESCENT: compute gradient & update the weights'''\n",
     "    # gradient\n",
@@ -105,9 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -115,10 +134,10 @@
      "output_type": "stream",
      "text": [
       "Output after training:\n",
-      "[[  9.99949945e-01]\n",
-      " [  9.99949945e-01]\n",
-      " [  5.00601027e-05]\n",
-      " [  5.00601027e-05]]\n"
+      "[[ 0.00505119]\n",
+      " [ 0.00505119]\n",
+      " [ 0.99494905]\n",
+      " [ 0.99494905]]\n"
      ]
     }
    ],
@@ -131,7 +150,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
